--- a/index.html
+++ b/index.html
@@ -5,49 +5,29 @@
 		<script src="lib/osmtogeojson.js"></script>
 		<script src="index.js"></script>
 
+		<link href='https://www.mapbox.com/base/latest/base.css' rel='stylesheet' />
 		<style>
-		html, body {
-			margin: 0;
-			padding: 0;
-		}
 
-		.wrapper {
-			width: 100%;
-			height: 100;
-		}
-
-		.left {
-			width: 40%;
-			height: 100%;
-			float: left;
-		}
-
-		.right: {
-			height: 100%;
-			width: 50%;
-		}
-
-		#source {
+		textarea {
 			width: 80%;
 			height: 500px;
 		}
 
-		#destination {
-			height: 500px;
-			width: 40%;
-		}
 		</style>
 	</head>
 	<body>
-		<div class="wrapper">
-			<div class="left">
-				<textarea id="source"></textarea> <br />
+
+<h1>OSM to GeoJSON Convertor</h1>
+<p>Paste your OSM XML or upload a file</p>
+		<div class='col12 clearfix'>
+		  <div class='col6'>
+				<textarea id="source"></textarea>
 				<button id="doConvert">Convert</button> OR
 				<input type="file" id="filePicker" />
 			</div>
-			<div class="right">
-				<textarea id="destination"></textarea>
-			</div>
+		  <div class='col6'><textarea id="destination"></textarea></div>
+		</div>
+
 	</body>
 
 </html>
