--- a/index.html
+++ b/index.html
@@ -4,30 +4,38 @@
 		<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
 		<script src="lib/osmtogeojson.js"></script>
 		<script src="index.js"></script>
-
 		<link href='https://www.mapbox.com/base/latest/base.css' rel='stylesheet' />
-		<style>
 
+		<style>
+		html{
+			margin: 20px;
+		}
 		textarea {
-			width: 80%;
+			width: 100%;
 			height: 500px;
 		}
-
+		input[type="file"]{
+		 vertical-align: text-bottom;
+		}
 		</style>
 	</head>
+
 	<body>
 
-<h1>OSM to GeoJSON Convertor</h1>
-<p>Paste your OSM XML or upload a file</p>
+		<h1>OSM to GeoJSON Convertor</h1>
+		<p>
+			A simple tool to convert OpenStreetMap data into GeoJSON <a href="https://github.com/batpad/geojson-flatten-tags">(source)</a>
+		</p>
 		<div class='col12 clearfix'>
-		  <div class='col6'>
-				<textarea id="source"></textarea>
-				<button id="doConvert">Convert</button> OR
-				<input type="file" id="filePicker" />
+		  <div class='col4'>
+				<textarea id="source" style="height:100px;" placeholder="Paste your OSM XML here"></textarea>
+				Or <input type="file" id="filePicker" />
 			</div>
-		  <div class='col6'><textarea id="destination"></textarea></div>
+			<div class='col2 center'>
+				<button class="button rcon next" id="doConvert">Convert</button>
+			</div>
+		  <div class='col6 fill-grey'><textarea id="destination" placeholder="Converted GeoJSON"></textarea></div>
 		</div>
 
 	</body>
-
 </html>
